Fixed layout issue in infographic section

--- a/css/main.css
+++ b/css/main.css
@@ -175,10 +175,6 @@ main {
   width: 30%;
 }
 
-.item-1-4 {
-  width: 25%
-}
-
 .item-2-3 {
   width: 70%;
 }
@@ -222,6 +218,11 @@ main {
 
 .full-height {
   min-height: 100vh;
+}
+
+footer {
+  width: 100vw;
+  height: auto;
 }
 
 /* WIDGETS SPECIFICS — widget trigger (? to be deleted ?) */
@@ -328,16 +329,16 @@ main {
 
 /* GENERAL — color */
 
-div.dark-bg {
+.dark-bg {
   background-color: #161E39;
   color: #EFEEE3;
 }
 
-div.white-bg {
+.white-bg {
   background-color: white;
 }
 
-div.orange-bg {
+.orange-bg {
   background-color: #EF723F;
 }
 
@@ -374,7 +375,8 @@ h2.left-align {
 
 h3,
 h5,
-button {
+button,
+footer p {
   font-family: 'Raleway', sans-serif;
   font-weight: lighter;
   text-transform: uppercase;
@@ -400,8 +402,14 @@ h5, button {
   margin-top: 0;
 }
 
-a.link-dk-bg {
+.dark-bg a {
   color: #E9FEE8;
+  text-decoration: none;
+}
+
+a {
+  display: inline-block;
+  padding: 0;
 }
 
 p {
@@ -474,6 +482,12 @@ button {
   border: 0;
   border-radius: 1em;
   cursor: pointer;
+}
+
+footer p {
+  font-size: .8rem;
+  padding: 0;
+  margin: 0;
 }
 
 /* GENERAL — css animations */
